# 17206_Shvetsova

task0/task0/: task0.sln
task0/task0/Debug/: task0.ilk
task0/task0/task0/: main.cpp  module3.h  task0.vcxproj  task0.vcxproj.filters
task0/task0/task0/Debug/: vc120.idb
task0/task0/task0/Debug/task0.tlog/: CL.read.1.tlog  CL.write.1.tlog  cl.command.1.tlog  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog  task0.lastbuildstate
task0b/task0b/: MakeDict.cpp  MakeDict.h  main.cpp
task1/task1/: Other.h  Reference.cpp  Trit.cpp  Trit.h  TritSet.cpp  TritSet.h  Trit_Iterator.cpp  main.cpp
task1/task1/test/: CMakeLists.txt  tests.cpp
task2/: BasicOp.h  Calculator.cpp  Calculator.h  Context.cpp  Context.h  Creator.cpp  Creator.h  Exceptions.h  Factory.cpp  Factory.h  Operator.cpp  Operator.h  main.cpp
task3/: Basic_Gamers.cpp  Basic_Gamers.h  ConsoleGamer.cpp  Gamer.cpp  Gamer.h  Model.cpp  Model.h  OptimalGamer.cpp  RandomGamer.cpp  SeaBattle.cpp  SeaBattle.h  View.cpp  View.h  main.cpp  optionparser.h
task4/: CSVParser.cpp  CSVParser.h  csv_parser.h  main.cpp
